refactor(TaskManager): return created tasks from addTask methods
Previously, addTask methods in TaskManager and related classes did not return the created tasks. This refactor ensures that these methods now return the newly created tasks after adding them.

- Modified `TaskManager` interface methods to return created tasks (`RegularTask`, `EpicTask`, `SubTask`) from respective `addTask` methods.
- Updated `TaskManagerImpl` to implement these changes and return the created tasks from `addTask` methods.
- Refactored `TaskRepository` to use generic `<T extends Task>` for `addTask` method, allowing the returned task to match its specific type.
- Updated `InMemoryTaskRepository` and `FileBakedTaskRepository` implementations to reflect the generic return type for `addTask` and persist the changes.
- Improved `FileBakedTaskRepository` to save data after task addition and return the added task.

Signed-off-by: Sergei Kanchikov <kanchikov.sergey@gmail.com>